add selector createAsynkThunk

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -23,6 +23,19 @@ body {
 .content {
   padding: 40px 0;
 
+  &__error-info {
+    margin: 100px auto;
+    text-align: center;
+    width: 500px;
+    h2 {
+      font-size: 32px;
+      margin-bottom: 10px;
+      font-weight: 700;
+    }
+    p {
+      font-size: 20px;
+    }
+  }
   &__title {
     font-weight: 800;
     font-size: 38px;
