--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -218,6 +218,19 @@ body {
             display: none;
           }
         }
+        &:disabled {
+          opacity: 0.4;
+          color: #787878;
+          &:active {
+            transform: none;
+          }
+          &:hover {
+            background-color: transparent;
+          }
+          svg path {
+            fill: #787878;
+          }
+        }
       }
 
       b {
